--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -14,13 +14,13 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      # 1. Get your code
+      # 1. Get your code (Updated to v4)
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # 2. Set up Python and Run your Script
+      # 2. Set up Python (Updated to v5)
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.9'
           
@@ -30,20 +30,21 @@ jobs:
       - name: Fetch FRED Data
         run: python scripts/fetch_data.py
 
-      # 3. Commit the new data.json (So you have a history)
+      # 3. Commit the new data.json
       - name: Commit Data Update
         run: |
           git config --global user.name 'LiquidityBot'
           git config --global user.email 'bot@noreply.github.com'
           git add public/data.json
+          # We add "|| exit 0" so it doesn't crash if there is no new data to save
           git commit -m "Auto-update liquidity data" || exit 0
           git push
 
-      # 4. Build the React Website
+      # 4. Build the React Website (Updated to v4)
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Install NPM Packages
         run: npm install
@@ -51,12 +52,12 @@ jobs:
       - name: Build Project
         run: npm run build
 
-      # 5. Deploy to GitHub Pages
+      # 5. Deploy to GitHub Pages (THE FIX: Updated to v3 and v4)
       - name: Upload Artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: './dist'
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
